--- a/application/views/article/index.phtml
+++ b/application/views/article/index.phtml
@@ -1,6 +1,6 @@
 <h1 class="h1">Articles</h1>
 <br />
-<?php if (!empty($this->articles)): ?>
+<?php if (count($this->articles)): ?>
 <?php foreach ($this->articles as $article): ?>
 <article class="blog-post">
 	<h2 class="h4"><?php echo $this->escape($article['title']); ?></h2>
